force-app/main/default/objects/BulkBilling_Orchestration__e/BulkBilling_Orchestration__e.object-meta.xml
<CustomObject>
    <description>Platform event published when a bulk-billed property/premise needs downstream orchestration (Order Orchestration + Zuora billing handoff). Decouples the Salesforce ramp-pricing service from downstream consumers.</description>
    <label>Bulk Billing Orchestration</label>
    <pluralLabel>Bulk Billing Orchestration Events</pluralLabel>
</CustomObject>