force-app/main/default/objects/BulkBilling_Orchestration__e/fields/BaseAnnualPrice__c.field-meta.xml
<CustomField>
    <fullName>BaseAnnualPrice__c</fullName>
    <description>Pre-discount annual list price the ramp discounts are applied against.</description>
    <label>Base Annual Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>