force-app/main/default/objects/BulkBilling_Orchestration__e/fields/ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ContextRecordId__c</fullName>
    <description>Id of the originating record (Quote, Order, Asset, Property, etc.) for traceability.</description>
    <externalId>true</externalId>
    <label>Context Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>