force-app/main/default/objects/BulkBilling_Orchestration__e/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Contract start date used to align the ramp schedule with Zuora billing periods.</description>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>