force-app/main/default/objects/BulkBilling_Orchestration__e/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Product code being orchestrated (e.g. BB1).</description>
    <label>Product Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>