force-app/main/default/objects/BulkBilling_Orchestration__e/fields/RampPayloadJson__c.field-meta.xml
<CustomField>
    <fullName>RampPayloadJson__c</fullName>
    <description>JSON-serialized ramp schedule (year, discount %, net price) ready for downstream Zuora integration.</description>
    <label>Ramp Payload JSON</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>